# slinter

./: .gitignore  .gitmodules  .hlint.yml  CHANGELOG.md  LICENSE  README.md  analyzer.cabal  slinter.cabal
.github/workflows/: haskell.yml  hlint.yml
devtool/: hook.sh
src/App/: Main.hs
src/Lib/: AST.hs  Command.hs  Lexier.hs  Parser.hs
src/Lib/AST/: Comment.hs  Contract.hs  Definition.hs  Expr.hs  File.hs  Function.hs  Model.hs  Oper.hs  Parser.hs  Pragma.hs  Stat.hs  Type.hs  Util.hs
tests/Lib/: ASTSpec.hs  LexierSpec.hs  ParserSpec.hs  TestCommon.hs
tests/Lib/AST/: CommentSpec.hs  ContractSpec.hs  DefinitionSpec.hs  ExprSpec.hs  FileSpec.hs  FunctionSpec.hs  OperSpec.hs  ParserSpec.hs  PragmaSpec.hs  StatSpec.hs  TypeSpec.hs  UtilSpec.hs
tests/Lib/testdata/: test.sol
