cabal-version:      3.0
name:               hs-playground
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             xieyuschen
maintainer:         xieyuschen@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

common common-depends
    build-depends:
        base ^>=4.17.2.0,
        directory,
        filepath,
        mtl,
        transformers,
        text,
        bytestring,
        hspec

library internallib
    import: common-depends
    exposed-modules:
       Lib.AST,
       Lib.Lexier
    hs-source-dirs: src

executable analyzer
    import:           
        warnings,
        common-depends
    main-is:          Main.hs
    build-depends:    
        internallib
    hs-source-dirs:  src/App
    default-language: Haskell2010
    
test-suite tests
    import:           
        warnings,
        common-depends
    build-depends:    
        internallib
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*