cabal-version:      3.0
name:               slinter
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             xieyuschen
maintainer:         xieyuschen@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
  
-- todo: remove this after I upload my forked version to hackage
-- https://github.com/xieyuschen/x-sum-type-boilerplate
library x-sum-type-boilerplate
  exposed-modules:
      SumTypes.TH
  hs-source-dirs:
      src/Lib/x-sum-type-boilerplate/library
  ghc-options: -Wall
  build-depends:
      base >= 4.1 && < 4.20
    , template-haskell
  default-language: Haskell2010

common warnings
    ghc-options: -Wall

common common-depends
    build-depends:
        base ^>=4.17.2.0,
        directory,
        filepath,
        mtl,
        transformers,
        text,
        bytestring,
        hspec,
        parsec ^>=3.1.16.1,
        -- force to use my forked version
        x-sum-type-boilerplate,
        optparse-applicative
        
library internallib
    import: common-depends
    exposed-modules:
        Lib.AST.File,
        Lib.AST.Function,
        Lib.AST.Pragma,
        Lib.AST.Model,
        Lib.AST.Type,
        Lib.AST.Expr,
        Lib.AST.Stat,
        Lib.AST.Util,
        Lib.AST.Oper,
        Lib.AST.Definition,
        Lib.AST.Parser,
        Lib.Command
    hs-source-dirs: src

executable slinter
    import:           
        warnings,
        common-depends
    main-is:          Main.hs
    build-depends:    
        internallib
    hs-source-dirs:  src/App
    default-language: Haskell2010
    ghc-options:    -fforce-recomp -Wall -Werror

test-suite tests
    import:           
        warnings,
        common-depends
    build-depends:    
        internallib
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    default-language: Haskell2010
    other-modules:
        Lib.AST.FileSpec,
        Lib.AST.FunctionSpec,
        Lib.AST.PragmaSpec,
        Lib.AST.TypeSpec,
        Lib.AST.ExprSpec,
        Lib.AST.StatSpec,
        Lib.AST.OperSpec,
        Lib.AST.UtilSpec,
        Lib.AST.DefinitionSpec,
        Lib.TestCommon,
        Lib.AST.ParserSpec
    build-tool-depends: hspec-discover:hspec-discover == 2.*
    ghc-options:    -fforce-recomp -Wall -Werror